[package]
name = "kubetail-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] } 
kube = { version = "0.74.0", default-features = true, features = ["derive", "runtime","client"] } 
k8s-openapi = { version = "0.15", default-features = false, features = ["v1_22"] } 
futures = "0.3"
serde = "1"
serde_json = "1.0"
schemars = "0.8"
thiserror = "1" 
json-patch = "*"
clap = { version = "3.1.6", features = ["derive"] }
anyhow="1.0.44"
log="0.4.14"
colored = "2"
rand="0.8.5"